# Soar

./: .env.example  .gitignore  MANIFEST.in  README.md  land_eval  main.py  pyproject.toml  requirements.txt  setup.py  setup.sh
src/crew_automation_evaluation_for_land_listing_opportunities/: crew.py  data_processor.py
src/crew_automation_evaluation_for_land_listing_opportunities/config/: agents.yaml  tasks.yaml
src/crew_automation_evaluation_for_land_listing_opportunities/utils/: pdf_generator.py
src/land_eval/: __init__.py  crew.py  data_processor.py
src/land_eval/config/: agents.yaml  tasks.yaml
src/land_eval/tools/: __init__.py  micro_market_tool.py  research_tool.py  workforce_tool.py
src/land_eval/utils/: pdf_generator.py
tests/: test_data_processor.py
