[project]
name = "crew_automation_evaluation_for_land_listing_opportunities"
version = "0.1.0"
description = "A CrewAI workflow for evaluating land listing opportunities by analyzing property data"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
    "pathlib>=1.0.1",
]

[project.scripts]
crew_automation_evaluation_for_land_listing_opportunities = "main:run"
run_crew = "main:run"
train = "main:train"
replay = "main:replay"
test = "main:test"
process_data = "src.crew_automation_evaluation_for_land_listing_opportunities.data_processor:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
