[project]
name = "land_eval"
version = "1.0.0"
description = "A CrewAI workflow for evaluating land listing opportunities by analyzing property data"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
    "pathlib>=1.0.1",
]

[project.optional-dependencies]
pdf = [
    "weasyprint>=60.2",
    "markdown>=3.5.2",
    "jinja2>=3.1.3",
    "mdformat>=0.7.17",
    "Pillow>=10.2.0"
]

[project.scripts]
crew_automation = "main:run"
run_crew = "main:run"
train = "main:train"
replay = "main:replay"
process_data = "src.land_eval.data_processor:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
